--- a/composer.json
+++ b/composer.json
@@ -38,5 +38,10 @@
       "Povils\\PHPMND\\Tests\\": "tests/"
     }
   },
-  "bin": ["phpmnd"]
+  "bin": ["phpmnd"],
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0-dev"
+    }
+  }
 }
