--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 
 .gitattributes export-ignore
 .gitignore export-ignore
+.travis.yml export-ignore
 LICENSE export-ignore
 phpunit.xml.dist export-ignore
 README.md export-ignore
