--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "phpunit/php-timer": "^1.0.6"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.5 || ^5.0"
+    "phpunit/phpunit": "^4.5 || ^5.0",
+    "squizlabs/php_codesniffer": "^2.8.1"
   },
   "autoload": {
     "psr-4": {
@@ -39,6 +40,11 @@
     }
   },
   "bin": ["phpmnd"],
+  "scripts": {
+    "test": "phpunit",
+    "cs-check": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
+    "cs-fix": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests"
+  },
   "extra": {
     "branch-alias": {
       "dev-master": "1.0-dev"
