--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+# User specific & automatically generated files #
+#################################################
 composer.lock
+/phpunit.xml
+/phpcs.xml
 vendor
+
+# IDE and editor specific files #
+#################################
+/nbproject
 .idea
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
