--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
 * text=auto eol=lf
 
+# Do not include the following files when creating repo artifacts, e.g. the zip
+.editorconfig export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 .travis.yml export-ignore
