Add PHAR build support with Box: https://github.com/box-project/box2

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,5 @@ LICENSE export-ignore
 phpunit.xml.dist export-ignore
 README.md export-ignore
 tests/ export-ignore
+box.json.dist export-ignore
+build/ export-ignore
