--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
       "Povils\\PHPMND\\Tests\\": "tests/"
     }
   },
-  "bin": ["phpmnd"],
+  "bin": ["bin/phpmnd"],
   "scripts": {
     "test": "phpunit",
     "cs-check": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
