--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,15 @@ language: php
 git:
   depth: 1
 
-php:
-  - 5.6
-  - 7.0
-  - 7.1
-  - hhvm
+matrix:
+  include:
+    - php: 5.6
+    - php: 7.0
+    - php: 7.1
+      env:
+      - LINT=true
+
+  fast_finish: true
 
 sudo: false
 
@@ -18,7 +22,12 @@ cache:
 before_install:
   - composer install -n
 
-script: vendor/bin/phpunit
+script:
+  - vendor/bin/phpunit
+  # Verify coding standard compliance only once
+  - if [[ $LINT = true ]]; then
+      composer cs-check;
+    fi
 
 notifications:
   email: false
