--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7 || ^6.0",
-    "squizlabs/php_codesniffer": "^2.8.1"
+    "squizlabs/php_codesniffer": "^2.8.1",
+    "padraic/phar-updater": "^1.0.3"
   },
   "autoload": {
     "psr-4": {
