--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 .travis.yml export-ignore
+CHANGELOG.md export-ignore
 CONTRIBUTING.md export-ignore
 LICENSE export-ignore
 phpunit.xml.dist export-ignore
