Update Changelog. Add Coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,17 @@ cache:
 
 before_install:
   - composer install -n
+  - composer require satooshi/php-coveralls --dev
 
 script:
-  - vendor/bin/phpunit
+  - vendor/bin/phpunit --coverage-text --coverage-clover build/logs/clover
   # Verify coding standard compliance only once
   - if [[ $LINT = true ]]; then
       composer cs-check;
     fi
+
+after_script:
+  - php vendor/bin/coveralls -v
 
 notifications:
   email: false
