--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   "require": {
     "php": "^5.6|^7.0",
     "symfony/console": "^2.4 || ^3.0 || ^4.0",
-    "symfony/finder": "^2.2 || ^3.0" || ^4.0,
+    "symfony/finder": "^2.2 || ^3.0" || ^4.0",
     "nikic/php-parser": "^3.0",
     "jakub-onderka/php-console-highlighter": "^0.3.2",
     "phpunit/php-timer": "^1.0"
