--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "issues": "https://github.com/povils/phpmnd/issues"
   },
   "require": {
-    "php": "^5.6|^7.0",
+    "php": "^7.1",
     "symfony/console": "^2.4 || ^3.0 || ^4.0",
     "symfony/finder": "^2.2 || ^3.0 || ^4.0",
     "nikic/php-parser": "^3.0",
