--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     "php": "^7.1",
     "symfony/console": "^2.4 || ^3.0 || ^4.0",
     "symfony/finder": "^2.2 || ^3.0 || ^4.0",
-    "nikic/php-parser": "^3.0",
+    "nikic/php-parser": "^3.0 || ^4.0",
     "jakub-onderka/php-console-highlighter": "^0.3.2",
-    "phpunit/php-timer": "^2.0"
+    "phpunit/php-timer": "^1.0 || ^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7.10 || ^6.0 || ^7.0",
@@ -42,7 +42,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.1-dev"
+      "dev-master": "2.0-dev"
     }
   }
 }
