--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,14 @@
   },
   "require": {
     "php": "^7.1",
-    "symfony/console": "^2.4 || ^3.0 || ^4.0",
-    "symfony/finder": "^2.2 || ^3.0 || ^4.0",
-    "nikic/php-parser": "^3.0 || ^4.0",
+    "symfony/console": "^4.0",
+    "symfony/finder": "^4.0",
+    "nikic/php-parser": "^4.0",
     "jakub-onderka/php-console-highlighter": "^0.3.2",
-    "phpunit/php-timer": "^1.0 || ^2.0"
+    "phpunit/php-timer": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7.10 || ^6.0 || ^7.0",
+    "phpunit/phpunit": "^7.0",
     "squizlabs/php_codesniffer": "^2.8.1"
   },
   "autoload": {
