--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "symfony/finder": "^4.0",
     "nikic/php-parser": "^4.0",
     "jakub-onderka/php-console-highlighter": "^0.4",
-    "phpunit/php-timer": "^2.0"
+    "phpunit/php-timer": "^2.0",
+    "ext-intl": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0",
