--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
   },
   "require": {
     "php": "^7.1",
-    "symfony/console": "^4.0",
-    "symfony/finder": "^4.0",
+    "symfony/console": "^4.0 || ^5.0",
+    "symfony/finder": "^4.0 || ^5.0",
     "nikic/php-parser": "^4.0",
     "jakub-onderka/php-console-highlighter": "^0.4",
     "phpunit/php-timer": "^2.0"
