--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,13 @@ git:
 
 matrix:
   include:
-    - php: 7.1
     - php: 7.2
       env: LINT=true
     - php: 7.2
+      env: COMPOSER_FLAGS="--prefer-lowest"
+    - php: 7.3
+      env: COMPOSER_FLAGS="--prefer-lowest"
+    - php: 7.4
       env: COMPOSER_FLAGS="--prefer-lowest"
 
   fast_finish: true
