--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ matrix:
       env: LINT=true
     - php: 7.2
       env: COMPOSER_FLAGS="--prefer-lowest"
+    - php: 7.3
+      env: LINT=true
+    - php: 7.3
+      env: COMPOSER_FLAGS="--prefer-lowest"
 
   fast_finish: true
 
