--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,15 @@
   },
   "require": {
     "php": "^7.1",
-    "symfony/console": "^4.0",
-    "symfony/finder": "^4.0",
+    "symfony/console": "^4.0||^5.0",
+    "symfony/finder": "^4.0||^5.0",
     "nikic/php-parser": "^4.0",
-    "jakub-onderka/php-console-highlighter": "^0.4",
-    "phpunit/php-timer": "^2.0"
+    "php-parallel-lint/php-console-highlighter": "^0.4",
+    "phpunit/php-timer": "^2.0||^3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.0",
-    "squizlabs/php_codesniffer": "^2.8.1"
+    "phpunit/phpunit": "^7.0||^8.0||^9.0",
+    "squizlabs/php_codesniffer": "^2.8.1||^3.5"
   },
   "autoload": {
     "psr-4": {
@@ -42,7 +42,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "2.1-dev"
+      "dev-master": "2.3-dev"
     }
   }
 }
