--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ matrix:
       env: LINT=true
     - php: 7.3
       env: COMPOSER_FLAGS="--prefer-lowest"
+    - php: 7.4
+      env: LINT=true
+    - php: 7.4
+      env: COMPOSER_FLAGS="--prefer-lowest"
 
   fast_finish: true
 
