--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,8 @@ clone_folder: c:\projects\workspace
 environment:
   matrix:
   - dependencies: highest
+    php_ver_target: 7.4
+  - dependencies: highest
     php_ver_target: 7.3
   - dependencies: highest
     php_ver_target: 7.2
