--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "issues": "https://github.com/povils/phpmnd/issues"
   },
   "require": {
-    "php": "^7.1",
+    "php": "^7.1|^8.0",
     "symfony/console": "^4.0||^5.0",
     "symfony/finder": "^4.0||^5.0",
     "nikic/php-parser": "^4.0",
