--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ matrix:
       env: LINT=true
     - php: 7.4
       env: COMPOSER_FLAGS="--prefer-lowest"
-    - php: 8.0
+    - php: 8.0snapshot
       env: LINT=true
-    - php: 8.0
+    - php: 8.0snapshot
       env: COMPOSER_FLAGS="--prefer-lowest"
 
   fast_finish: true
