--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "phpunit/php-timer": "^2.0||^3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.0||^9.0",
+    "phpunit/phpunit": "^7.0||^8.0||^9.0",
     "squizlabs/php_codesniffer": "^2.8.1||^3.5"
   },
   "autoload": {
