--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ matrix:
       env: LINT=true
 #    - php: 8.0
 #      env: LINT=true
+  allow_failures:
+      -  php: nightly
+        env: LINT=true
 
   fast_finish: true
 
