--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest, windows-latest, macOS-latest]
-        php-version: ['7.1', '7.2', '7.3', '7.4', 8.0']
+        php-version: ['7.1', '7.2', '7.3', '7.4', '8.0']
     name: PHP ${{ matrix.php-version }} Test on ${{ matrix.operating-system }}
     steps:
       - name: Checkout code
