--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,8 @@ jobs:
         php-version: ['7.1', '7.2', '7.3', '7.4', '8.0']
         symfony-require: ['^4', '^5', '^6']
         exclude:
+          - symfony-require: "^5"
+            php-version: "7.1"
           - symfony-require: "^6"
             php-version: "7.1"
           - symfony-require: "^6"
