--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,15 @@
         "issues": "https://github.com/povils/phpmnd/issues"
     },
     "require": {
-        "php": "^7.1|^8.0",
-        "symfony/console": "^4.0||^5.0||^6.0",
-        "symfony/finder": "^4.0||^5.0||^6.0",
-        "nikic/php-parser": "^4.0",
+        "php": "^7.4 || ^8.0",
+        "symfony/console": "^4.4 || ^5.0 || ^6.0",
+        "symfony/finder": "^4.4 || ^5.0 || ^6.0",
+        "nikic/php-parser": "^4.13",
         "php-parallel-lint/php-console-highlighter": "^0.5",
         "phpunit/php-timer": "^2.0||^3.0||^4.0||^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0||^8.0||^9.0",
+        "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^2.8.1||^3.5"
     },
     "autoload": {
