--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,6 +7,12 @@
          failOnRisky="true"
          verbose="true"
 >
+    <coverage>
+        <include>
+            <directory>src</directory>
+        </include>
+    </coverage>
+
     <testsuites>
         <testsuite name="PHPMND Test Suite">
             <directory>tests/</directory>
@@ -14,14 +20,4 @@
             <exclude>tests/Fixtures</exclude>
         </testsuite>
     </testsuites>
-
-    <filter>
-        <whitelist>
-            <directory>src/</directory>
-
-            <exclude>
-                <directory>vendor/</directory>
-            </exclude>
-        </whitelist>
-    </filter>
 </phpunit>
