--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "symfony/finder": "^4.4 || ^5.0 || ^6.0",
         "nikic/php-parser": "^4.13",
         "php-parallel-lint/php-console-highlighter": "^1.0",
-        "phpunit/php-timer": "^2.0||^3.0||^4.0||^5.0"
+        "phpunit/php-timer": "^2.0||^3.0||^4.0||^5.0||^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
