--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,10 +19,16 @@ jobs:
       matrix:
         operating-system: [ ubuntu-latest ]
         php-version: ['7.4', '8.0', '8.1', '8.2', '8.3']
-        symfony-require: ['^4', '^5', '^6']
+        symfony-require: ['^4', '^5', '^6', '^7']
         exclude:
           - symfony-require: "^6"
             php-version: "7.4"
+          - symfony-require: "^7"
+            php-version: "7.4"
+          - symfony-require: "^7"
+            php-version: "8.0"
+          - symfony-require: "^7"
+            php-version: "8.1"
         include:
           - { operating-system: 'windows-latest', php-version: '8.0', symfony-require: '^5' }
 
@@ -55,6 +61,10 @@ jobs:
 
       - name: Configure Symfony Flex
         run: composer config extra.symfony.require ${{ matrix.symfony-require }}
+
+      - name: Set minimum-stability dev
+        if: matrix.symfony-require == '^7'
+        run: composer config minimum-stability dev
 
       - name: Install dependencies
         run: composer update --optimize-autoloader --no-interaction --no-progress --prefer-dist
