--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
         "php": "^7.4 || ^8.0",
         "symfony/console": "^4.4 || ^5.0 || ^6.0 || ^7.0",
         "symfony/finder": "^4.4 || ^5.0 || ^6.0 || ^7.0",
-        "nikic/php-parser": "^4.13",
+        "nikic/php-parser": "^4.18 || ^5.0",
         "php-parallel-lint/php-console-highlighter": "^1.0",
         "phpunit/php-timer": "^2.0||^3.0||^4.0||^5.0||^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^9.6",
         "squizlabs/php_codesniffer": "^2.8.1||^3.5"
     },
     "autoload": {
