--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,5 +72,11 @@ jobs:
         run: composer update --optimize-autoloader --no-interaction --no-progress --prefer-dist ${{ matrix.composer-flags }}
 
       - name: Run tests
+        if: github.ref_type == 'branch'
+        shell: bash
+        run: composer run test --exclude-group tags
+
+      - name: Run release tests
+        if: github.ref_type == 'tag'
         shell: bash
         run: composer run test
