--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,12 @@
     },
     "require": {
         "php": "^7.4 || ^8.0",
-        "symfony/console": "^4.4 || ^5.0 || ^6.0 || ^7.0",
-        "symfony/finder": "^4.4 || ^5.0 || ^6.0 || ^7.0",
+        "composer-runtime-api": "^2.0",
         "nikic/php-parser": "^4.18 || ^5.0",
         "php-parallel-lint/php-console-highlighter": "^1.0",
-        "phpunit/php-timer": "^2.0 || ^3.0 || ^4.0 || ^5.0 || ^6.0 || ^7.0"
+        "phpunit/php-timer": "^2.0 || ^3.0 || ^4.0 || ^5.0 || ^6.0 || ^7.0",
+        "symfony/console": "^4.4 || ^5.0 || ^6.0 || ^7.0",
+        "symfony/finder": "^4.4 || ^5.0 || ^6.0 || ^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
@@ -33,6 +34,9 @@
         "psr-4": {
             "Povils\\PHPMND\\Tests\\": "tests/"
         }
+    },
+    "config": {
+        "sort-packages": true
     },
     "bin": [
         "bin/phpmnd"
