--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     },
     "require": {
         "php": "^7.4 || ^8.0",
+        "ext-dom": "*",
         "composer-runtime-api": "^2.0",
         "nikic/php-parser": "^4.18 || ^5.0",
         "php-parallel-lint/php-console-highlighter": "^1.0",
