Distribute the project as a phar instead of source code.

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,10 @@
 
 # Do not include the following files when creating repo artifacts, e.g. the zip
 /.* export-ignore
+/bin/build-phar.sh export-ignore
+/bin/phpmnd.src export-ignore
 /build/ export-ignore
+/src/ export-ignore
 /tests/ export-ignore
 /CHANGELOG.md export-ignore
 /CONTRIBUTING.md export-ignore
